change HAL -> LL

--- a/LCD.ioc
+++ b/LCD.ioc
@@ -2,26 +2,6 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=SPI1_TX
-Dma.RequestsNb=1
-Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.0.EventEnable=DISABLE
-Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_TX.0.Instance=DMA1_Stream0
-Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.0.Mode=DMA_NORMAL
-Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_TX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_TX.0.RequestNumber=1
-Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_TX.0.SignalID=NONE
-Dma.SPI1_TX.0.SyncEnable=DISABLE
-Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_TX.0.SyncRequestNumber=1
-Dma.SPI1_TX.0.SyncSignalID=NONE
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LEDTask,24,128,StartLEDTask,Default,NULL,Dynamic,NULL,NULL;LvglTimer_Task,24,512,StartLvglTimerTask,Default,NULL,Dynamic,NULL,NULL;LVGLTask,24,512,StartLVGLTask,Default,NULL,Dynamic,NULL,NULL
@@ -31,13 +11,12 @@ KeepUserPlacement=false
 Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=DMA
-Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP1=FREERTOS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
@@ -59,7 +38,6 @@ Mcu.UserName=STM32H743VITx
 MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -67,7 +45,6 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -136,7 +113,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_SPI1_Init-SPI1-false-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-LL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=100000000
 RCC.AHB4Freq_Value=100000000
