--- a/LCD.ioc
+++ b/LCD.ioc
@@ -21,17 +21,16 @@ Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN (PH0)
-Mcu.Pin10=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin11=VP_SYS_VS_tim1
+Mcu.Pin10=VP_SYS_VS_tim1
 Mcu.Pin2=PH1-OSC_OUT (PH1)
 Mcu.Pin3=PA0
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=12
+Mcu.Pin8=PA7
+Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V2
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -70,11 +69,9 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=BLK
 PA3.Locked=true
 PA3.Signal=GPIO_Output
-PA5.Mode=Full_Duplex_Master
+PA5.Mode=Simplex_Bidirectional_Master
 PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
+PA7.Mode=Simplex_Bidirectional_Master
 PA7.Signal=SPI1_MOSI
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=BLUE_LED
@@ -192,7 +189,7 @@ RCC.VCOInput1Freq_Value=8000000
 RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=8000000
 SPI1.CalculateBaudRate=37.5 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
